--- a/wp-content/themes/mobig-child/assets/css/modules/_box.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_box.scss
@@ -1,2 +1,11 @@
 // ===== BOX
 
+.boxCober {
+  width: 100%; height: auto; padding: 0; margin: 0; @include display(flex); @include flex-direction(row); @include align-items(center); @include justify-content(center);
+  & h2 {
+    color: $col1; padding: 0; margin: 0 20px 0 0; text-align: center; text-transform: uppercase; @include fluid-type(13px, 17px, 320px, 1200px); line-height: 1; letter-spacing: 2px; font-family: $extrabold;
+  }
+  & a {
+
+  }
+}
