--- a/wp-content/themes/mobig-child/assets/css/modules/_box.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_box.scss
@@ -9,3 +9,79 @@
 
   }
 }
+.boxZonaDesc {
+  width: 100%; height: auto; padding: 0; margin: 0 0 30px; position: relative; @include box-sizing(border-box);
+  & h1 {
+    color: $col3; margin: 0 0 20px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(16px, 28px, 320px, 1200px);
+  }
+  & p {
+    color: $col1; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $medium; @include fluid-type(13px, 16px, 320px, 1200px);
+  }
+  &__btns {
+    width: 100%; height: auto; padding: 0; margin: 0; @include display(flex); @include flex-direction(row); @include align-items(center); @include justify-content(center);
+    & a {
+      font-size: rem(10px); padding: 5px 10px 3px; margin: 0 8px 0 0;
+      &:last-child {
+        margin: 0;
+      }
+    }
+    @media all and (min-width: 480px) {
+      & a {
+        font-size: rem(12px);
+      }
+    }
+    @media all and (min-width: 768px) {
+      & a {
+        font-size: rem(13px);
+      }
+    }
+    @media all and (min-width: 992px) {
+      & a {
+        font-size: rem(10px);
+      }
+    }
+    @media all and (min-width: 1024px) {
+      & a {
+        font-size: rem(11px);
+      }
+    }
+    @media all and (min-width: 1200px) {
+      & a {
+        font-size: rem(13px);
+      }
+    }
+  }
+  @media all and (min-width: 992px) {
+    margin: 0;
+    & h1 {
+      text-align: left;
+    }
+    & p {
+      text-align: left;
+    }
+  }
+}
+.boxZona {
+  width: 100%; height: auto; padding: 0; margin: 0; position: relative; @include box-sizing(border-box);
+  &__title {
+    margin: 0 0 15px; padding: 8px 0 5px; display: block; width: 100%; height: auto; color: $white; @include box-sizing(border-box); @include fluid-type(12px, 14px, 320px, 1200px); border-radius: 20px; font-family: $semibold; letter-spacing : 0.5px; word-wrap: break-word; background-color: $col2; text-align: center;
+  }
+  &__desc {
+    margin: 0 0 15px; padding: 10px 20px; display: block; width: 100%; height: auto; @include box-sizing(border-box); border-radius: 10px; background-color: $col1; box-shadow: 0 4px 10px rgba($black, 0.25);
+    & p {
+      color: $white; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $thin; @include fluid-type(13px, 18px, 320px, 1200px);
+    }
+    @media all and (min-width: 768px) {
+      min-height: 220px; height: 100%; margin: 0;
+    }
+  }
+  &__btn {
+    width: 100%; height: auto; padding: 0; margin: 0; position: relative; @include box-sizing(border-box); text-align: center;
+    @media all and (min-width: 768px) {
+      @include position(absolute, null null 10px 0);
+    }
+  }
+  @media all and (min-width: 768px) {
+    margin: 0;
+  }
+}
