--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -186,5 +186,5 @@ article.maps {
 
 // Zona wifi
 .zonawifi-sec {
-  width: 100%; height: auto; padding: 30px 0; margin: 0; @include box-sizing(border-box); background-color: $white; position: relative;
+  width: 100%; height: auto; padding: 40px 0; margin: 0; @include box-sizing(border-box); position: relative; @include linear-gradient($white, $col5);
 }
