--- a/wp-content/themes/mobig-child/assets/css/modules/_inputs.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_inputs.scss
@@ -17,14 +17,14 @@
       position: relative; margin-bottom: 10px;
     }
     & .animatedField {
-      position: relative; width: 100%; height: 52px; line-height: 52px;
+      position: relative; width: 100%; height: 48px; line-height: 48px;
       & label {
-        @include position(absolute, 0 null null 0); width: 100%; color: $col8; cursor: text; @include transition(0.2s all); margin: 0; padding: 0 0 0 17px; text-transform: uppercase; @include box-sizing(border-box);
+        @include position(absolute, 0 null null 0); width: 100%; color: $col1; cursor: text; @include transition(0.2s all); margin: 0; padding: 0 0 0 17px; @include box-sizing(border-box); font-family: $medium;
       }
-     & input[type="text"],
-     & input[type="email"],
-     & input[type="password"] {
-        width: 100%; border: 0; outline: 0; padding: 17px 17px 10px; border: 0.5px solid $col8; box-shadow: none; background-color: $white!important; border-radius: 0!important; @include fluid-type(13px, 16px, 320px, 1200px);
+      & input[type="text"],
+      & input[type="email"],
+      & input[type="password"] {
+        width: 100%; border: 0; outline: 0; padding: 17px 17px 5px; border: 0.5px solid $col4; box-shadow: none; background-color: rgba($col3, 0.10)!important; border-radius: 4px!important; @include fluid-type(13px, 16px, 320px, 1200px);
         &:invalid {
           outline: 0;
         }
@@ -34,7 +34,7 @@
         }
         &:focus ~ label,
         &:valid ~ label {
-          font-size: rem(11px); top: -16px; color: $col1; padding: 0 0 0 8px;
+          font-size: rem(11px); top: -14px; color: $col1; padding: 0 0 0 8px;
         }
         &.error-line {
           border-color: red; background-color: $col4;
@@ -47,16 +47,16 @@
     & .animatedTextArea {
       position: relative; width: 100%; height: auto;
       & label {
-        @include position(absolute, 15px null null 0); width: 100%; color: $col8; cursor: text; @include transition(0.2s all); margin: 0; padding: 0 0 0 17px; height: calc(100% + 1px); @include box-sizing(border-box); text-transform: uppercase;
+        @include position(absolute, 15px null null 0); width: 100%; color: $col1; cursor: text; @include transition(0.2s all); margin: 0; padding: 0 0 0 17px; height: calc(100% + 1px); @include box-sizing(border-box); font-family: $medium;
       }
       textarea {
-        width: 100%; border: 0; outline: 0; padding: 17px 17px 10px; height: auto; border: 0.5px solid $col8; box-shadow: none; background-color: $white!important; border-radius: 0!important; @include fluid-type(13px, 16px, 320px, 1200px); margin-bottom: 0; @include box-sizing(border-box);
+        width: 100%; border: 0; outline: 0; padding: 17px 17px 10px; height: auto; border: 0.5px solid $col4; box-shadow: none; background-color: rgba($col3, 0.10)!important; border-radius: 4px!important; @include fluid-type(13px, 16px, 320px, 1200px); margin-bottom: 0; @include box-sizing(border-box);
         &:invalid {
           outline: 0;
         }
         &:focus,
         &:valid {
-          border-color: $col1; background-color: $col4;
+          border-color: $col1; background-color: $col4; box-shadow: none;
         }
         &:focus ~ label,
         &:valid ~ label {
@@ -94,12 +94,12 @@
     //     color: $c7; font-size: rem(24px); font-weight: 900;
     //   }
     // }
-    // button[type="submit"], input[type="submit"] {
-    //   width: auto; height: 40px; padding: 0 30px; margin: 0 0 0 0; text-transform: uppercase; text-align: center; color: $white; display: inline-block; border: 1px solid $col2; @include box-sizing(border-box); line-height: 38px; font-size: rem(16px); cursor: pointer; position: relative; overflow: hidden; border-radius: 20px; background-color: $col2; @include transition(all 0.23s); box-shadow: 0 0 5px rgba($black, 0.25);
-    //   &:hover {
-    //     background-color: $col3; color: $white; border: 1px solid $col3;
-    //   }
-    // }
+    button[type="submit"], input[type="submit"] {
+      width: auto; height: 40px; padding: 0 35px; margin: 20px 0 0; text-transform: uppercase; text-align: center; color: $white; display: inline-block; border: 1px solid $col1; @include box-sizing(border-box); line-height: 38px; font-size: rem(16px); cursor: pointer; position: relative; overflow: hidden; border-radius: 20px; background-color: $col1; @include transition(all 0.23s); box-shadow: 0 0 5px rgba($black, 0.25); font-family: $medium;
+      &:hover {
+        background-color: $col6; color: $white; border: 1px solid $col1;
+      }
+    }
     .loadBtn {
       pointer-events: none; background-color: rgba(238, 116, 34, 0.377)!important; @include transition(all 0.25s ease 0s);
       &:after {
