--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -253,3 +253,84 @@ article.maps {
     }
   }
 }
+
+.telPre-sec{
+  width: 100%; height: auto; @include position(relative, null null null null); padding: 0; margin: 0; background-position:center; background-repeat: no-repeat; background-size: contain; overflow: hidden; background-color: $white;
+  padding-top: 2%;
+  &__title{
+    color: $col2;
+    font-family: $extrabold;
+  }
+  &__desc{
+    color: $col11;
+    font-family: $regular;
+  }
+}
+.card{
+  margin: 1%;
+  padding: 0% !important;
+  border-radius: 15px;
+  &__header{
+    background-color: $col2;
+    --bs-gutter-x: 0rem;
+    width: 100% important;
+    border: none;
+    padding: 1rem 1rem .5rem;
+    border-radius: 15px 15px 0px 0px !important;
+    &--title{
+      font-size: 1.5em;
+      color: $white;
+    }
+  }
+  box-shadow: 0 4px 10px rgba($black, 0.25);
+  .card__telPre{
+    border-radius: 25px;
+    background-color: white;
+    
+    &__gigas{
+      color: $col1;
+      text-align: center;
+    }
+    &__precio{
+      color: $col1;
+      text-align: center;
+
+    }
+    &__detail{
+      list-style:none;
+      li{
+        margin-left: 0% !important;
+        font-family: $regular;
+          text-align: left;
+        &:first-child{
+          color: $col1;
+          
+        }
+        & i{
+          float: left;
+          position: inline;
+          margin-right: 1%;
+          color: $col1;
+        }
+        & p{
+          font-family: $regular;
+          font-size: .75rem;
+        }
+      }
+    }
+    &__btn{
+      background-color: $col2;
+      border-radius: 50px;
+      color: $white;
+      border: none;
+      width: 150px;
+      text-align: center;
+      font-family: $regular;
+    }
+
+  }
+}
+
+.cardCustom{
+  width: 20%;
+}
