--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -401,4 +401,16 @@ article.maps {
 }
 .formcontacto-sec {
   width: 100%; height: auto; padding: 30px 0 20px; margin: 0; @include box-sizing(border-box); position: relative; background-attachment: local; background-position: -150px; background-repeat: no-repeat; background-size: contain; background-color: $white; background-image: url('#{$imgR}contacto/bg_contacto.svg');
+  & .arrowContact {
+    @include position(absolute, 80px 40px null null); display: block; width: 20px; height: auto; padding: 0; margin: 0; z-index: 3;
+    @media all and (min-width: 768px) {
+    }
+    @media all and (min-width: 992px) {
+    }
+    @media all and (min-width: 1024px) {
+    }
+    @media all and (min-width: 1200px) {
+      width: 15px; top: 90px; right: 20px;
+    }
+  }
 }
