se sube agina de telefonia pospago

--- a/wp-content/themes/mobig-child/assets/css/_site-settings.scss
+++ b/wp-content/themes/mobig-child/assets/css/_site-settings.scss
@@ -51,6 +51,7 @@ $col9: #7e8080;
 $col10: #d5427f;
 $col11: #333333;
 $col12: #1a1a1a;
+$col13: #fafafa;
 $white: #ffffff;
 $black: #000000;
 $facebook: #1877f2;
