se suben cambios en mifi prepago

--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -309,8 +309,19 @@ article.maps {
 }
 
 .telPre-sec{
-  width: 100%; height: auto; @include position(relative, null null null null); padding: 0; margin: 0; background-position:center; background-repeat: no-repeat; background-size: contain; overflow: hidden; background-color: $white;
-  padding-top: 2%;
+  &--center{
+    width: 100%; height: auto; @include position(relative, null null null null); 
+    padding: 0; margin: 0; background-position:center; background-repeat: no-repeat;
+    background-size: contain; overflow: hidden; background-color: $white;
+    padding-top: 2%; padding-bottom: 2%;
+  }
+  &--full{
+    width: 100%; height: auto; @include position(relative, null null null null); 
+    padding: 0; margin: 0; background-position:center; background-repeat: no-repeat;
+    background-size: cover; overflow: hidden; background-color: $white;
+    padding-top: 2%; padding-bottom: 2%;
+  }
+  
   &--planSieteDoce{
     background-position: right;
     background-repeat: no-repeat;
@@ -321,14 +332,17 @@ article.maps {
     font-weight: bold;
     &--pink{
       color: $col1;
+      font-family: $extrabold;
     }
     &--yellow{
       color: $col2;
+      font-family: $extrabold;
     }
   }
   &__desc{
     color: $col11;
     font-family: $regular;
+    font-size: 1.2em;
   }
   padding-bottom: 2%;
   img.maskFlechas{
@@ -337,6 +351,7 @@ article.maps {
     right: 4%;
     position: absolute;
   }
+  
 }
 .card{
   margin: 1%;
@@ -463,9 +478,49 @@ article.maps {
     width: 33%;
     bottom: -24%;
   }
+
+  img.mask{
+    &--Tache{
+      max-width: 100px;
+      top: 60%;
+      right: 38%;
+      position: absolute !important;
+      width: 60px;
+    }
+
+    &--Flechas{
+      max-width: 100px;
+      top: -105%;
+      right: 38%;
+      position: absolute !important;
+      width: 70px;
+    }
+  }
+
 }
 
 .cobertura-sec{
   background-repeat: no-repeat;
   right: 0%;
+}
+
+.Modem-sec{
+  background-color: $col1;
+  &__img{
+    width: 100%;
+    max-width: 100%;
+  }
+  &__cont{
+    padding-top: 5%;
+  }
+  &__title{
+    color: $white;
+    font-family: $extrabold;
+    margin-bottom: 3%;
+  }
+  &__desc{
+    color: $white;
+    font-family: $thin;
+    font-size: 1.4em;
+  }
 }
