Se agrega ajuste en icono

--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -390,7 +390,7 @@ article.maps {
         & i{
           float: left;
           position: inline;
-          margin-right: 1%;
+          margin-right: 6px;
           color: $col1;
         }
         & p{
