Se ajusta prepago

--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -449,9 +449,9 @@ article.maps {
     }
 }
 .cardCustom{
-  width: 20%;
+  // width: 20%;
   &--big{
-    width: 23%;
+    // width: 23%;
   }
 }
 
