se agrega paddine

--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -312,6 +312,7 @@ article.maps {
 }
 
 .telPre-sec{
+  padding-top: 5%;
   &--center{
     width: 100%; height: auto; @include position(relative, null null null null); 
     padding: 0; margin: 0; background-position:center; background-repeat: no-repeat;
