--- a/wp-content/themes/mobig-child/assets/css/modules/_box.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_box.scss
@@ -135,3 +135,29 @@
     columns: 2; -webkit-columns: 2; -moz-columns: 2;
   }
 }
+.listFilterGalerry {
+  width: 100%; height: auto; padding: 0; margin: 0 0 40px 0; position: relative; @include box-sizing(border-box);
+  ul {
+    width: 100%; height: auto; padding: 0; margin: 0; list-style-type: none; @include displayFlex(flex, row, center, center, wrap);
+    li {
+      list-style-type: none; margin: 0 6px 0; padding: 0;
+      a {
+        display: inline-block; width: auto; height: 40px; background-color: $white; margin: 0; padding: 0 15px; color: $c2; text-align: center; line-height: 40px; outline: none; font-size: rem(12px); @include transition(all 300ms ease); @include box-sizing(border-box); border-radius: 20px; border: 1px solid $col1; text-decoration: none; font-family: $semibold;
+        &:hover {
+          background-color: $col1; color: $white;
+        }
+        &.activeFilter {
+          background-color: $col1; color: $white;
+        }
+      }
+      // &:first-child {
+      //   a {
+      //     @include border-left-radius(20px); @include border-right-radius(0);
+      //   }
+      // }
+      &:last-child {
+        margin: 0;
+      }
+    }
+  }
+}
