--- a/wp-content/themes/mobig-child/assets/css/modules/_box.scss
+++ b/wp-content/themes/mobig-child/assets/css/modules/_box.scss
@@ -11,8 +11,11 @@
 }
 .boxZonaDesc {
   width: 100%; height: auto; padding: 0; margin: 0 0 30px; position: relative; @include box-sizing(border-box);
-  & h1 {
-    color: $col3; margin: 0 0 20px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(16px, 28px, 320px, 1200px);
+  & h3 {
+    color: $col1; margin: 0 0 10px; padding: 0; line-height: 1; text-align: center; font-family: $extrabold; @include fluid-type(16px, 30px, 320px, 1200px);
+  }
+  & h2 {
+    color: $col3; margin: 0 0 20px; padding: 0; line-height: 1; text-align: left; font-family: $extrabold; @include fluid-type(16px, 22px, 320px, 1200px);
   }
   & p {
     color: $col1; margin: 0 0 20px; padding: 0; line-height: 1.2; text-align: center; font-family: $medium; @include fluid-type(13px, 16px, 320px, 1200px);
