--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -337,6 +337,12 @@ article.maps {
     background-repeat: no-repeat;
     background-color: $col13;
   }
+
+  &--planSieteDoceLeft{
+    background-position: left;
+    background-repeat: no-repeat;
+    background-color: $white;
+  }
   &__title{
     font-family: $extrabold;
     font-weight: bold;
@@ -375,12 +381,20 @@ article.maps {
   &--pink{
     min-height: 350px !important;
   }
+  &--roaming{
+    min-height: 390px !important;
+  }
   &__header{    
     &--yellow{
       background-color: $col2;
     }
     &--pink{
       background-color: $col1;
+    }
+    &--pink2{
+      background-color: $col1;
+      min-height: 85px;
+      vertical-align: middle;
     }
     --bs-gutter-x: 0rem;
     width: 100% important;
@@ -390,6 +404,10 @@ article.maps {
     &__title{
       font-size: 1.5em;
       color: $white;
+      &--pink2{
+        font-size: 1.3em;
+        color: $white;
+      }
     }
   }
   box-shadow: 0 4px 10px rgba($black, 0.25);
