Se alinea doots slider

--- a/wp-content/themes/mobig-child/assets/css/layout/_main.scss
+++ b/wp-content/themes/mobig-child/assets/css/layout/_main.scss
@@ -47,6 +47,7 @@ article.maps {
         }
       }
       @media all and (min-width: 992px) {
+        width: 66.66666667%;
         & .imgFig {
           max-width: 300px;
         }
